--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://info.stoneagetools.com/new-exchanger-cleaning-accessories-for-abx-2l" target="_blank">New Accessories for the AutoBox ABX-2L</a></h4>
+        <p>StoneAge is pleased to announce three new accessories for the AutoBox ABX-2L automated exchanger cleaning system.<br>
+<small><i class="fa fa-paper-plane-o"></i> E-blast, March 2016</small></p>
+      </li>
+      <li>
         <h4><a href="http://info.stoneagetools.com/new-automated-pipe-cleaning-systems-for-spring-shutdown" target="_blank">New Automated Pipe Cleaning Systems for Spring Shutdown</a></h4>
         <p>StoneAge is now taking pre-orders for the <strong>Navigator</strong> portable rotary hose device (RHD) and <strong>ProDrive</strong> hands-free hose feed system.<br>
 <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2016</small></p>
@@ -209,14 +214,19 @@ permalink: /
       <h2>Message from the CEO</h2>
     </div>
     <!-- lightbox call -->
-    <div style="margin-right:30px; margin-bottom:10px;">
+    <div>
       <a href="#" src="/assets/vids.html" data-featherlight="/assets/vids.html #godirect-vid">
         <img src="assets/img/thumb/godirect-vid.png" alt="StoneAge Direct Sales video" class="img-responsive" />
       </a>
     </div>
     <!-- lightbox content -->
     
-    <!-- end lightbox content -->
+    <div class="section-heading margin-top-30">
+      <h2>New Catalog</h2>
+    </div>
+    <p>The 2016/17 Warthog Sewer Nozzles catalogs are here!</p>
+      <a href="request-catalog">
+      <img src="/assets/img/catalog_cover_sewer_2016.jpg" class="img-responsive" alt="2016 Warthog sewer nozzles catalog"></a>
   </div>
 </section>
 
