--- a/news.html
+++ b/news.html
@@ -17,6 +17,14 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
+          <a href="http://info.stoneagetools.com/new-exchanger-cleaning-accessories-for-abx-2l" target="_blank"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> New Accessories for the AutoBox ABX-2L</h4></a>
+          StoneAge is pleased to announce three new accessories for the AutoBox ABX-2L automated exchanger cleaning system.
+          <p class="grey"><small>E-blast &ndash; March 30, 2016</small></p>
+        </div>
+      </div>
+      
+      <div class="media">          
+        <div class="media-body">
           <a href="http://info.stoneagetools.com/new-automated-pipe-cleaning-systems-for-spring-shutdown" target="_blank"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> New Automated Pipe Cleaning Systems for Spring Shutdown</h4></a>
           StoneAge is now taking pre-orders for the <strong>Navigator</strong> portable rotary hose device (RHD) and <strong>ProDrive</strong> hands-free hose feed system.
           <p class="grey"><small>E-blast &ndash; March 10, 2016</small></p>
