--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -158,9 +158,13 @@ master-slider: yes
                       <td><span class="metric">1300 bar</span></td>
                     </tr>
                     <tr>
-                      <th>Storage Capacity*</th>
-                      <td>84 ft</td>
+                      <th>Storage Capacity&#42;</th>
+                      <td>84 ft (2 hoses)</td>
                       <td><span class="metric">25 m</span></td>
+                    </tr>
+                    <tr>
+                      <th>Hose Size</th>
+                      <td colspan="2">&le; 6/4</td>
                     </tr>
                     <tr>
                       <th>Swivel Inlet</th>
@@ -171,13 +175,14 @@ master-slider: yes
                       <td colspan="2">MP6 to BSPP4C</td>
                     </tr>
                     <tr>
+                      <th>Snout Length</th>
+                      <td>90 in.</td>
+                      <td><span class="metric">228 cm</span></td>
+                    </tr>
+                    <tr>
                       <th>Dimensions</th>
                       <td>28.6 x 15.4 in.</td>
                       <td><span class="metric">73 x 39 cm</span></td>
-                    </tr>
-                    <tr>
-                      <th>Hose Size</th>
-                      <td colspan="2">&le; 6/4</td>
                     </tr>
                     <tr>
                       <th>Weight</th>
@@ -186,6 +191,7 @@ master-slider: yes
                     </tr>
                   </tbody>
                   </table>
+                  <p>&#42; Based on 6/4 size hose</p>
                 </div>
               </div>
             </div>
