--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -93,14 +93,19 @@ master-slider: yes
               <table class="table specs table-hover">
               <tbody>
                 <tr>
-                  <th>Horizontal Length&#42;</th>
+                  <th>Horizontal Rail Length&#42;</th>
                   <td>Standard 15 ft</td>
                   <td><span class="metric">457 cm</span><br></td>
                 </tr>
                 <tr>
-                  <th>Vertical Length&#42;</th>
+                  <th>Vertical Rail Length&#42;</th>
                   <td>Standard 3.5 ft</td>
                   <td><span class="metric">107 cm</span></td>
+                </tr>
+                <tr>
+                  <th>Snout Length</th>
+                  <td>90 in.</td>
+                  <td><span class="metric">228 cm</span></td>
                 </tr>
                 <tr>
                   <th>Hose Size</th>
