--- a/waterblast-automation/navigator-rotary-hose-device.html
+++ b/waterblast-automation/navigator-rotary-hose-device.html
@@ -171,7 +171,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="http://info.stoneagetools.com/navigator-quote" class="btn btn-lg btn-block contact" role="button">Request a quote</a>
 
   </div>
   <!-- End Product Info -->
