product accordion tabs

--- a/rotary-waterblast-tools/rotary-swivels.html
+++ b/rotary-waterblast-tools/rotary-swivels.html
@@ -76,7 +76,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Features <span class="glyphicon glyphicon-plus"></span>
+                Features <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -96,7 +96,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingApp">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseApp" aria-expanded="false" aria-controls="collapseApp">
-                Applications<span class="glyphicon glyphicon-plus"></span>
+                Applications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -117,7 +117,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingSG">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSG" aria-expanded="false" aria-controls="collapseSG">
-                SG Swivel Specifications<span class="glyphicon glyphicon-plus"></span>
+                SG Swivel Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -458,7 +458,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingSH">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSH" aria-expanded="false" aria-controls="collapseSH">
-                SH Swivel Specifications<span class="glyphicon glyphicon-plus"></span>
+                SH Swivel Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -524,7 +524,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingSL">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSL" aria-expanded="false" aria-controls="collapseSL">
-                SL Swivel Specifications<span class="glyphicon glyphicon-plus"></span>
+                SL Swivel Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -653,7 +653,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingSM">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSM" aria-expanded="false" aria-controls="collapseSM">
-                SM Swivel Specifications<span class="glyphicon glyphicon-plus"></span>
+                SM Swivel Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -782,7 +782,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingUH">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseUH" aria-expanded="false" aria-controls="collapseUH">
-                UH Swivel Specifications<span class="glyphicon glyphicon-plus"></span>
+                UH Swivel Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -912,7 +912,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <span class="glyphicon glyphicon-plus"></span>
+                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -946,7 +946,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <span class="glyphicon glyphicon-plus"></span>
+                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
