--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -76,7 +76,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Features <span class="glyphicon glyphicon-plus"></span>
+                Features <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -95,7 +95,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingApp">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseApp" aria-expanded="false" aria-controls="collapseApp">
-                Applications<span class="glyphicon glyphicon-plus"></span>
+                Applications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -116,7 +116,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="heading22k">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse22k" aria-expanded="false" aria-controls="collapse22k">
-                22k/1500 bar Specifications<span class="glyphicon glyphicon-plus"></span>
+                22k/1500 bar Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -521,7 +521,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="heading40k">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse40k" aria-expanded="false" aria-controls="collapse40k">
-                40k/2800 bar Specifications<span class="glyphicon glyphicon-plus"></span>
+                40k/2800 bar Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -759,7 +759,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingBtl">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseBtl" aria-expanded="false" aria-controls="collapseBtl">
-                Beetle Specifications<span class="glyphicon glyphicon-plus"></span>
+                Beetle Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -896,7 +896,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <span class="glyphicon glyphicon-plus"></span>
+                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -912,7 +912,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <span class="glyphicon glyphicon-plus"></span>
+                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
