--- a/rotary-waterblast-tools/bjv-centralizers.html
+++ b/rotary-waterblast-tools/bjv-centralizers.html
@@ -72,7 +72,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                Skid Style Centralizers <span class="glyphicon glyphicon-plus"></span>
+                Skid Style Centralizers <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -114,7 +114,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingTwo">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Cage Style Centralizers <span class="glyphicon glyphicon-plus"></span>
+                Cage Style Centralizers <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -147,7 +147,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingTele">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTele" aria-expanded="false" aria-controls="collapseTele">
-                Wheeled Centralizers <span class="glyphicon glyphicon-plus"></span>
+                Wheeled Centralizers <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -224,7 +224,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <span class="glyphicon glyphicon-plus"></span>
+                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
