--- a/rotary-waterblast-tools/hose-storage-reel.html
+++ b/rotary-waterblast-tools/hose-storage-reel.html
@@ -39,7 +39,7 @@ master-slider: yes
       <div class="product-heading">
         <h1>HWB Hose Storage Reel</h1>
         <div class="dropdown product-social">
-          <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
+          <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
             <li><a href="mailto:?subject=StoneAge HWB Hose Storage Reel&body=Check out the StoneAge HWB Hose Storage Reel: http://www.stoneagetools.com/rotary-waterblast-tools/hose-storage-reel.html">E-mail link</a></li>
           </ul>
@@ -55,7 +55,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Specifications <span class="glyphicon glyphicon-plus"></span>
+                Specifications <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -123,7 +123,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <span class="glyphicon glyphicon-plus"></span>
+                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
