--- a/rotary-waterblast-tools/nozzles-extensions.html
+++ b/rotary-waterblast-tools/nozzles-extensions.html
@@ -85,7 +85,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingSG">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSG" aria-expanded="false" aria-controls="collapseSG">
-                Attack Tips<span class="glyphicon glyphicon-plus"></span>
+                Attack Tips <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -120,7 +120,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingSH">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSH" aria-expanded="false" aria-controls="collapseSH">
-                Sapphire Nozzles<span class="glyphicon glyphicon-plus"></span>
+                Sapphire Nozzles <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -155,7 +155,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingSL">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSL" aria-expanded="false" aria-controls="collapseSL">
-                OC8 Carbide Nozzles<span class="glyphicon glyphicon-plus"></span>
+                OC8 Carbide Nozzles <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -190,7 +190,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingSM">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSM" aria-expanded="false" aria-controls="collapseSM">
-                Nipple Extensions<span class="glyphicon glyphicon-plus"></span>
+                Nipple Extensions <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -230,7 +230,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <span class="glyphicon glyphicon-plus"></span>
+                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
