--- a/rotary-waterblast-tools/spitfire-shotgunning.html
+++ b/rotary-waterblast-tools/spitfire-shotgunning.html
@@ -60,7 +60,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Features <span class="glyphicon glyphicon-plus"></span>
+                Features <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -81,7 +81,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="heading40k">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Specifications <span class="glyphicon glyphicon-plus"></span>
+                Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -230,7 +230,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <span class="glyphicon glyphicon-plus"></span>
+                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -249,7 +249,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <span class="glyphicon glyphicon-plus"></span>
+                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
