--- a/sewer-tools-nozzles/hydro-x.html
+++ b/sewer-tools-nozzles/hydro-x.html
@@ -63,7 +63,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Features <span class="glyphicon glyphicon-plus"></span>
+                Features <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -83,7 +83,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingTwo">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Non-Rotary Specifications <span class="glyphicon glyphicon-plus"></span>
+                Non-Rotary Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -219,7 +219,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingRHX">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseRHX" aria-expanded="false" aria-controls="collapseRHX">
-                Rotary Specifications <span class="glyphicon glyphicon-plus"></span>
+                Rotary Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -278,7 +278,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <span class="glyphicon glyphicon-plus"></span>
+                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -313,7 +313,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <span class="glyphicon glyphicon-plus"></span>
+                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
