--- a/sewer-tools-nozzles/warthog-centralizers.html
+++ b/sewer-tools-nozzles/warthog-centralizers.html
@@ -64,7 +64,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingPoly">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsePoly" aria-expanded="false" aria-controls="collapsePoly">
-                Poly-Fin Centralizers <span class="glyphicon glyphicon-plus"></span>
+                Poly-Fin Centralizers <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -90,7 +90,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingSuper">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSuper" aria-expanded="false" aria-controls="collapseSuper">
-                Super Centralizers <span class="glyphicon glyphicon-plus"></span>
+                Super Centralizers <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -121,7 +121,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingTwo">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Wheeled Centralizers <span class="glyphicon glyphicon-plus"></span>
+                Wheeled Centralizers <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -175,7 +175,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <span class="glyphicon glyphicon-plus"></span>
+                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -193,7 +193,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <span class="glyphicon glyphicon-plus"></span>
+                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
