--- a/sewer-tools-nozzles/warthog-wv.html
+++ b/sewer-tools-nozzles/warthog-wv.html
@@ -60,7 +60,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Specifications <span class="glyphicon glyphicon-plus"></span>
+                Specifications <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -132,7 +132,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="heading40k">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Head Options <span class="glyphicon glyphicon-plus"></span>
+                Head Options <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -179,7 +179,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <span class="glyphicon glyphicon-plus"></span>
+                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -197,7 +197,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <span class="glyphicon glyphicon-plus"></span>
+                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
