misc fixes and tool configs

--- a/technical-reference.html
+++ b/technical-reference.html
@@ -75,7 +75,7 @@ permalink: /technical-reference
 </section>
 
 <section class="container safety-callout margin-bottom-30">
-  <a href="safety-information.html"><h2><i class="fa fa-warning"></i> Operating Waterblast Equipment can be potentially dangerous</h2>
+  <a href="/safety"><h2><i class="fa fa-warning"></i> Operating Waterblast Equipment can be potentially dangerous</h2>
     <p>Please reference important safety information and be aware of proper safety precautions before use.</p></a>
 </section>
 
