--- a/waterblast-automation/blackhawk-concrete-demo.html
+++ b/waterblast-automation/blackhawk-concrete-demo.html
@@ -200,7 +200,7 @@ master-slider: yes
       <table>
         <tr>
           <td><a href="../assets/pdf/bhk_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
