--- a/waterblast-automation/bundle-blaster.html
+++ b/waterblast-automation/bundle-blaster.html
@@ -206,7 +206,7 @@ The StoneAge Bundle Blaster is a powerful and affordable automated solution for 
       <table>
         <tr>
           <td><a href="../assets/pdf/bundle_blaster_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
 <!--            <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>-->
         </tr>
       </table>
