--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -284,7 +284,7 @@ master-slider: yes
         <tr>
           <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
           <td><a href="/assets/pdf/sales-manual/HCS-2L_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Configuration</a></td>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
