--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -101,11 +101,12 @@ master-slider: yes
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#p4" aria-controls="p4" role="tab" data-toggle="tab">1/4" Inlet</a></li>
+                <li role="presentation"><a href="#mp6" aria-controls="mp6" role="tab" data-toggle="tab">3/8" Inlet</a></li>
                 <li role="presentation"><a href="#mp9" aria-controls="mp9" role="tab" data-toggle="tab">9/16" Inlet</a></li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
-                <!-- P4 -->
+                <!-- 1/4 -->
                 <div role="tabpanel" class="tab-pane active" id="p4">
                   <table class="table specs table-hover">
                   <tbody>
@@ -174,7 +175,76 @@ master-slider: yes
                   </tbody>
                   </table>
                 </div>
-                <!-- MP9 -->
+                <!-- 3/8 -->
+                <div role="tabpanel" class="tab-pane" id="mp6">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Family</th>
+                      <td colspan="2">Badger</td>
+                    </tr>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">BA-LK-MP6R</td>
+                    </tr>
+                    <tr>
+                      <th>Pressure Range</th>
+                      <td>2–22k psi</td>
+                      <td><span class="metric">140–1500 bar</span>
+                    </tr>
+                    <tr>
+                      <th>Flow Range</th>
+                      <td>3–15 gpm</td>
+                      <td><span class="metric">11–57 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Flow Coefficient</th>
+                      <td colspan="2">0.40 CV</td>
+                    </tr>
+                    <tr>
+                      <th>Rotation Speed</th>
+                      <td colspan="2">High speed</td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">3/8 RH</td>
+                    </tr>
+                    <tr>
+                      <th>Port Size</th>
+                      <td colspan="2">OD3M, M3</td>
+                    </tr>
+                    <tr>
+                      <th>Nozzle Type</th>
+                      <td colspan="2">OD3M</td>
+                    </tr>
+                    <tr>
+                      <th>Port Plug</th>
+                      <td colspan="2">OD3M 002</td>
+                    </tr>
+                    <tr>
+                      <th>Diameter</th>
+                      <td>1.3 in.</td>
+                      <td><span class="metric">33 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>2.0 in.</td>
+                      <td><span class="metric">50 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>0.45 lb</td>
+                      <td><span class="metric">0.20 kg</span></td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Water Temp.</th>
+                      <td>270 &deg;F</td>
+                      <td><span class="metric">120 &deg;C</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+                <!-- 9/16 -->
                 <div role="tabpanel" class="tab-pane" id="mp9">
                   <table class="table specs table-hover">
                   <tbody>
@@ -285,6 +355,7 @@ master-slider: yes
             <div class="panel-body">
               <ul>
                 <li><a href="../assets/pdf/manuals/ba-lk-2in_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;2" Badger User Manual</a></li>
+                <li><a href="../assets/pdf/sales-manual/BA2_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;2" Badger Tool Configuration</a></li>
                 <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -345,7 +416,8 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="/assets/pdf/sales-manual/BA2_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Configuration</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
