--- a/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
@@ -274,6 +274,7 @@ master-slider: yes
             <div class="panel-body">
               <ul>
                 <li><a href="../assets/pdf/manuals/BA_6inch_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;6" Badger User Manual</a></li>
+                <li><a href="../assets/pdf/sales-manual/BA6_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;6" Badger Tool Configuration</a></li>
                 <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -330,7 +331,8 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="../assets/pdf/sales-manual/BA6_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Configuration</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
