--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -469,6 +469,7 @@ master-slider: yes
                 <li><a href="../assets/pdf/manuals/bc-h9-c_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k Barracuda Models User Manual</a></li>
                 <li><a href="../assets/pdf/manuals/bc-h9-xxlf-c-ti_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k Extra Low Flow Barracuda User Manual</a></li>
                 <li><a href="../assets/pdf/manuals/BC_705_Cartridge_Assy.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BC-705 Cartridge Info Sheet</a></li>
+                <li><a href="../assets/pdf/sales-manual/BC_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Barracuda Tool Configuration</a></li>
                 <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -516,7 +517,9 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td>
+        <a href="../assets/pdf/sales-manual/BC_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Configuration</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
