--- a/sewer-tools-nozzles/warthog-wg.html
+++ b/sewer-tools-nozzles/warthog-wg.html
@@ -265,7 +265,7 @@ Hardened stainless steel orifices resist cracking and scratching</li>
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
