--- a/sewer-tools-nozzles/warthog-wt.html
+++ b/sewer-tools-nozzles/warthog-wt.html
@@ -209,7 +209,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>            
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
