--- a/waterblast-automation/boiler-tube-cleaner.html
+++ b/waterblast-automation/boiler-tube-cleaner.html
@@ -206,7 +206,7 @@ master-slider: yes
       <table>
         <tr>
           <td><a href="../assets/pdf/btc-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
