--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -219,7 +219,7 @@ master-slider: yes
         <tr>
           <td><a href="/assets/pdf/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
           <td><a href="/assets/pdf/sales-manual/Fin_Fan_Config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Configuration</a></td>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
