--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -213,7 +213,7 @@ The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system des
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
 <!--
           <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>
           <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>
