add new regional locations

--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@ page-type: contact
 title: Contact StoneAge
 excerpt: Contact and location information, sales and dealer information, support information for StoneAge high pressure waterblasting, sewer jetting, and downhole cleaning equipment.
 permalink: /contact
-main-contact: yes
+contact-main: yes
 ---
 
 <!-- Contact Main -->
 <section id="contact">
   <!-- Google Map -->
-  <div id="map-canvas"></div>
+  <div id="main-map-canvas" class="mapping"></div>
 
   <div class="fluid-container landing-nav margin-bottom-30">
     <div class="container">
@@ -38,18 +38,20 @@ main-contact: yes
             <i class="fa fa-map-marker"></i><br/>Locations</h2>
             <hr>
             <h3>Durango Headquarters</h3>
-            <address>
-              466 South Skylane Drive <br>
-              Durango, CO 81303 <br><br>
-              +1 (970) 259-2869 <br>
-              <a href="mailto:sales@stoneagetools.com" class="">sales@stoneagetools.com</a>
-            </address>
-            <p class="small">Monday to Friday 8:00am&ndash;5:00pm MST</p>
-            <hr>
-            <h3>Houston Area Office</h3>
+            <p>+1 (970) 259-2869<br/>
+              <a href="/durango-headquarters">View details</a></p>
+            <h3>Houston Area</h3>
             <p>
               +1 (281) 888-5069<br/>
               <a href="/houston">View details</a></p>
+            <h3>Louisiana</h3>
+            <p>
+              +1 (225) 508-3520<br/>
+              <a href="/louisiana">View details</a></p>
+            <h3>Ohio</h3>
+            <p>
+              +1 (440) 230-8080<br/>
+              <a href="/ohio">View details</a></p>
           </div>
           <!-- E-mail Us -->
           <div class="col-sm-4 contact-method">
