--- a/loc-houston.html
+++ b/loc-houston.html
@@ -3,7 +3,7 @@ layout: default
 page-type: contact
 title: StoneAge Houston - Waterblast tools and automated equipment for high pressure hydrobrasting
 permalink: /houston
-houston-contact: yes
+contact-houston: yes
 ---
 
 <section id="contact">
@@ -30,7 +30,7 @@ houston-contact: yes
   <main>
     <section class="container padding-tb-30 margin-bottom-30">
       <aside class="col-sm-3 margin-bottom-30 cta">
-        <a href="waterblast-automation/autobox-abx-2l.html"><img src="../assets/img/stoneage-houston-pansy-st.jpg" class="img-responsive img-thumbnail" alt="StoneAge Houston office"></a>
+        <img src="../assets/img/stoneage-houston-pansy-st.jpg" class="img-responsive img-thumbnail" alt="StoneAge Houston office">
         <div class="padding-tb-30">
           <p><span class="slab">StoneAge Houston</span><br/>
             2150 Pansy St.<br/>Pasadena, TX 77503<br/><br/>
@@ -46,7 +46,7 @@ houston-contact: yes
           <p><span class="slab bold text-uppercase">Tool rentals available!</span><br/>Our rental fleet is equipped with the tools you need. Contact us for information.</p>
         </div>
 
-        <h3 class="section-heading">Operations &amp; Field Support</h3>
+        <h3 class="section-heading">Operations, Rentals, Field Support</h3>
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Harry Richmond</strong><br/>
@@ -62,8 +62,16 @@ houston-contact: yes
               <a href="mailto:valoree.miller@stoneagetools.com">valoree.miller@stoneagetools.com</a></p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Doug McGee</strong>
+            <br/>Automation Technician<br/>
+              Mobile: +1 (281) 507-9080<br/>
+              <a href="mailto:doug.mcgee@stoneagetools.com">doug.mcgee@stoneagetools.com</a></p>
+          </div>
+        </div>
 
-        <h3 class="section-heading">Sales &amp; Rentals</h3>
+        <h3 class="section-heading">Outside Sales</h3>
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Bill O'Briant</strong><br/>
