--- a/technical-reference.html
+++ b/technical-reference.html
@@ -49,7 +49,8 @@ permalink: /technical-reference
         <a href="assets/pdf/reference/legacy/RJV_Manual.pdf" target="_blank" class="list-group-item"><strong>RJV</strong></a>
         <a href="assets/pdf/reference/legacy/SA-1900_SA-1909_Manual.pdf" target="_blank" class="list-group-item"><strong>SA 1900, 1909</strong> Porta-Lance</a>
         <a href="assets/pdf/reference/legacy/SA-1940_Manual_Insert_with_UHS.pdf" target="_blank" class="list-group-item"><strong>SA 1940</strong> Porta-Lance</a>
-        <a href="assets/pdf/reference/legacy/SL-H9H9_Manual.pdf" target="_blank" class="list-group-item"><strong>SPF-P8, SPF-MP9</strong> Spitfire (Female shaft connection)</a>
+        <a href="assets/pdf/reference/legacy/SL-H9H9_Manual.pdf" target="_blank" class="list-group-item"><strong>SL-H9H9</strong> Swivel</a>
+        <a href="assets/pdf/reference/legacy/SPF_Manual_Insert.pdf" target="_blank" class="list-group-item"><strong>SPF-P8, SPF-MP9</strong> Spitfire (Female shaft connection)</a>
         <a href="assets/pdf/reference/legacy/TR-100_Manual_Insert.pdf" target="_blank" class="list-group-item"><strong>TR-100</strong> Torus</a>
       </div>
     </div>
