add Shires to OH and LA

--- a/loc-la.html
+++ b/loc-la.html
@@ -61,6 +61,17 @@ contact-la: yes
               <a href="mailto:becky.smith@stoneagetools.com">becky.smith@stoneagetools.com</a></p>
           </div>
         </div>
+        
+        <h3 class="section-heading">Outside Sales</h3>
+        <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Bill Shires</strong><br/>
+              Market Development Director<br/>
+              Office: +1 (970) 403-1419<br/>
+              Mobile: +1 (970) 903-4218
+            <a href="mailto:bill.shires@stoneagetools.com">bill.shires@stoneagetools.com</a></p>
+          </div>
+        </div>
 
       </div>
     </section>
