--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -587,7 +587,7 @@ master-slider: yes
                 <li><a href="../assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-MP12 Tool Manual</a></li>
                 <li><a href="../assets/pdf/manuals/BJV-H9_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-H9 Tool Manual</a></li>
                 <li><a href="../assets/pdf/40K_BJV_head_porting.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k BJV Head Porting Diagram</a></li>
-                <li><a href="../assets/pdf/sales-manual/BJV_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Tool Configuration</a></li>
+                <li><a href="../assets/pdf/sales-manual/BJV_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Tool Talk</a></li>
                 <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -645,7 +645,7 @@ master-slider: yes
       <table>
         <tr>
 <!--          <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>-->
-          <td><a href="../assets/pdf/sales-manual/BJV_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Configuration</a></td>
+          <td><a href="../assets/pdf/sales-manual/BJV_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
