--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -51,7 +51,7 @@ master-slider: yes
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=StoneAge Automated Fin Fan Exchanger Cleaning&body=Check out the Fin Fan Accessory for the StoneAge AutoBox ABX-2L automated flex lancing system:  http://www.stoneagetools.com/fin-fan-kit">E-mail link</a></li>
+            <li><a href="mailto:?subject=StoneAge Automated Fin Fan Exchanger Cleaning&body=Check out the Fin Fan Accessory for the StoneAge AutoBox ABX-2L automated flex lancing system:  http://www.stoneagetools.com/fin-fan-accessory">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
@@ -216,7 +216,7 @@ master-slider: yes
       <table>
         <tr>
           <td><a href="/assets/pdf/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-          <td><a href="/assets/pdf/sales-manual/Fin_Fan_Config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Configuration</a></td>
+          <td><a href="/assets/pdf/sales-manual/Fin_Fan_Config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
