--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -163,7 +163,7 @@ The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of de
                 <li><a href="../assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus Data Sheet</a></li>
                 <li><a href="../assets/pdf/manuals/TR-200_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Manual</a></li>
                 <li><a href="../assets/pdf/manuals/TR-200_Fastener_Assembly_Instructions.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Fastener Assembly Instructions</a></li>
-                <li><a href="../assets/pdf/sales-manual/TR200_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Tool Configuration</a></li>
+                <li><a href="../assets/pdf/sales-manual/TR200_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
