--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -930,8 +930,8 @@ master-slider: yes
                 <li><a href="../assets/pdf/manuals/bn-40k_manual_insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k/2800 bar Banshee Models User Manual</a></li>
                 <li><a href="../assets/pdf/manuals/bns13_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Shrouded Banshee (BNS13) User Manual</a></li>
                 <li><a href="../assets/pdf/manuals/bt_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models User Manual</a></li>
-                <li><a href="../assets/pdf/sales-manual/BN_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee BN Models Tool Configuration</a></li>
-                <li><a href="../assets/pdf/sales-manual/BTL_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models Tool Configuration</a></li>
+                <li><a href="../assets/pdf/sales-manual/BN_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee BN Models Tool Talk</a></li>
+                <li><a href="../assets/pdf/sales-manual/BTL_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
