--- a/rotary-waterblast-tools/gopher-tube-cleaning.html
+++ b/rotary-waterblast-tools/gopher-tube-cleaning.html
@@ -300,7 +300,7 @@ master-slider: yes
               <ul>
                 <li><a href="../assets/pdf/manuals/GO-MP9_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;22k Gopher GO-MP9 Tool Manual</a></li>
                 <li><a href="../assets/pdf/manuals/GO-H9-C_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k Gopher GO-H9-C Tool Manual</a></li>
-                <li><a href="../assets/pdf/sales-manual/GO_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Gopher Tool Configuration</a></li>
+                <li><a href="../assets/pdf/sales-manual/GO_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Gopher Tool Talk</a></li>
                 <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -347,7 +347,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/sales-manual/GO_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Configuration</a></td>
+          <td><a href="../assets/pdf/sales-manual/GO_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
