--- a/rotary-waterblast-tools/spitfire-shotgunning.html
+++ b/rotary-waterblast-tools/spitfire-shotgunning.html
@@ -271,7 +271,7 @@ master-slider: yes
             <div class="panel-body">
               <ul>
                 <li><a href="../assets/pdf/manuals/spfr_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Spitfire User Manual</a></li>
-                <li><a href="../assets/pdf/sales-manual/SPFR_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Spitfire Tool Configuration</a></li>
+                <li><a href="../assets/pdf/sales-manual/SPFR_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Spitfire Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -317,7 +317,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/sales-manual/SPFR_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Configuration</a></td>
+          <td><a href="../assets/pdf/sales-manual/SPFR_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
