--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -168,7 +168,7 @@ master-slider: yes
                 <li><a href="../assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus Data Sheet</a></li>
                 <li><a href="../assets/pdf/manuals/TR-130_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Manual</a></li>
                 <li><a href="../assets/pdf/manuals/TR-130_Fastener_Assembly_Instructions.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Fastener Assembly Instructions</a></li>
-                <li><a href="../assets/pdf/sales-manual/TR130_config.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Tool Configuration</a></li>
+                <li><a href="../assets/pdf/sales-manual/TR130_config.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
