--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -130,6 +130,9 @@
 <div id="spfr-maint-vid">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/sFMKz5e7hGo?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="ast-vid">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ysEzQ_8Yt5U?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 
 <!-- Sewer -->
 <div id="warthog-cent-vid">
