--- a/waterblast-automation/autostroke.html
+++ b/waterblast-automation/autostroke.html
@@ -29,7 +29,7 @@ master-slider: yes
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/ast-01.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
             <img class="ms-thumb" src="../assets/img/product/thumb-ast-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/geLBK4Tuj_M"> </a>
+              <a data-type="video" href="https://www.youtube.com/embed/ysEzQ_8Yt5U"> </a>
           </div>
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/ast-03.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
@@ -134,18 +134,10 @@ master-slider: yes
             <div class="panel-body">
               <div class="col-sm-6">
                 <!-- lightbox call -->
-                <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-vid">
-                  <img src="assets/vid/thumb/fin-fan-vid.jpg" alt="Fin Fan exchanger cleaning accessory video" class="img-responsive" />
+                <a href="#" data-featherlight="/assets/vid/vids.html #ast-vid">
+                  <img src="assets/vid/thumb/ast-vid.png" alt="AutoStroke exchanger cleaning accessory video" class="img-responsive" />
                 </a>
-                <p class="caption">Fin Fan Accessory Overview</p>
-                <!-- end lightbox call -->
-              </div>
-              <div class="col-sm-6">
-                <!-- lightbox call -->
-                <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-train-vid">
-                  <img src="assets/vid/thumb/fin-fan-train-vid.png" alt="Fin Fan Accessory training video" class="img-responsive" />
-                </a>
-                <p class="caption">Fin Fan Accessory Training</p>
+                <p class="caption">AutoStroke Overview</p>
                 <!-- end lightbox call -->
               </div>
             </div>
