--- a/technical-reference.html
+++ b/technical-reference.html
@@ -63,6 +63,7 @@ permalink: /technical-reference
         <a href="assets/pdf/reference/legacy/Obsolete_FO.pdf" target="_blank" class="list-group-item">FO Model Tools</a>
         <a href="assets/pdf/reference/legacy/Obsolete_FS.pdf" target="_blank" class="list-group-item">FS Model Tools</a>
         <a href="assets/pdf/reference/legacy/Obsolete_FT.pdf" target="_blank" class="list-group-item">FT Model Tools</a>
+        <a href="assets/pdf/reference/legacy/Obsolete_HC.pdf" target="_blank" class="list-group-item">HC Model Tools</a>
         <a href="assets/pdf/reference/legacy/Obsolete_HF.pdf" target="_blank" class="list-group-item">HF Model Tools</a>
         <a href="assets/pdf/reference/legacy/Obsolete_HI.pdf" target="_blank" class="list-group-item">HI Model Tools</a>
         <a href="assets/pdf/reference/legacy/Obsolete_MT.pdf" target="_blank" class="list-group-item">MT Model Tools</a>
