typo in spincat page title!

--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: landing
-title: SpinCat downhole tools be StoneAge 
+title: SpinCat downhole tools by StoneAge 
 excerpt: Durable self-rotating nozzles for well service applications, the SpinCat tools Cct through parafin, asphaltine, hydrates, calcium carbonate, barium sulphate or mineral scale with ease.
 permalink: /downhole-tools
 ---
